<resources>
    <string name="app_name">Autolab Monitoreo Remoto</string>
    <string name="app_title">Monitoreo Remoto</string>

    <string name="dial_action_phone_number">+5713477030</string>

    <string name="action_settings">Ajustes</string>
    <string name="command_list">Elegir comando</string>
    <string name="menu_item_trip_delete">Borrar</string>
    <string name="notification_label">Presionar para abrir OBD-Reader</string>
    <string name="service_started">La conexión OBD ha comenzado.</string>
    <string name="service_stopped">La conexión OBD se ha detenido.</string>
    <string name="title_activity_trips_list">Lista de Viajes</string>
    <string name="title_activity_trouble_codes">Códigos de Error</string>
    <string name="menu_trip_list">Viajes</string>
    <string name="pref_upload_category_title">Carga de datos</string>
    <string name="pref_upload_category" translatable="false">upload_category</string>
    <string name="dialog_loading_body">Cargando aplicación, por favor espere…</string>
    <string name="dialog_loading_title">Cargando…</string>
    <string name="menu_settings">Configuración</string>
    <string name="menu_get_dtc">Obtener DTC</string>
    <string name="menu_start_live_data">Iniciar datos en vivo</string>
    <string name="menu_stop_live_data">Detener datos en vivo</string>
    <string name="title_pref_commands">Comandos OBD</string>
    <string name="title_pref_obd">Preferencias OBD</string>
    <string name="notification_action">Presionar para abrir OBD-Reader</string>
    <string name="service_starting">Iniciando conexión OBD...</string>
    <string name="status_bluetooth_connected">conectado</string>
    <string name="status_bluetooth_disabled">deshabilitado</string>
    <string name="status_bluetooth_ok">disponible</string>
    <string name="status_gps_no_support">no disponible</string>
    <string name="status_gps_ready">disponible</string>
    <string name="status_obd_ready">OK</string>
    <string name="status_bluetooth_error_connecting">conexión fallida</string>
    <string name="status_gps_stopped">detenido</string>
    <string name="status_no_bluetooth_id">no disponible</string>
    <string name="status_obd_disconnected">desconectado</string>
    <string name="text_no_bluetooth_id">Lo sentidos, su dispositivo no soporta Bluetooth</string>
    <string name="text_no_gps_support">Lo sentidos, su dispositivo no soporta Bluetooth</string>
    <string name="text_bluetooth_nodevice">Dispositivo Bluetooth no seleccionado</string>
    <string name="text_bluetooth_error_connecting">No se puede conectar con el dispositivo Bluetooth</string>
    <string name="status_bluetooth_connecting">conecting...</string>
    <string name="text_bluetooth_disabled">Usted tiene Bluetooth deshabilitado. Por favor habilitelo (usando servicio Mock)</string>
    <string name="text_dtc_no_data">No hay DTC guardado</string>
    <string name="text_save_trip_not_available">Disculpas, el viaje no será guardado.</string>
    <string name="text_obd_command_failure">Error en comando OBD</string>
    <string name="status_gps_fix">fix adquirida</string>
    <string name="status_gps_no_fix">fix no adquirida</string>
    <string name="status_gps_not_used">no utilizado</string>
    <string name="status_gps_started">iniciado</string>
    <string name="status_obd_data">recibiendo información...</string>
    <string name="text_no_orientation_sensor">Sensor de orientación no encontrado</string>

    <string name="action_clear_codes">Clear Codes</string>

    <string name="pref_gps_category" translatable="false">gps_category</string>

    <string name="text_gps" translatable="false">GPS</string>
    <string name="text_obd" translatable="false">OBD</string>
    <string name="text_bluetooth" translatable="false">Bluetooth</string>
    <string name="text_orientation_default" translatable="false">N</string>
    <string name="text_zero" translatable="false">0</string>
    <string name="text_consumption_default" translatable="false">0l/100km</string>
    <string name="text_runtime_default" translatable="false">00:00:00</string>

    <string name="title_pref_bluetooth" translatable="false">Bluetooth</string>
    <string name="title_pref_gps" translatable="false">GPS</string>

    <string name="status_obd_no_support">NA</string>
    <string name="pref_upload_title">Habilitar carga de datos</string>
    <string name="pref_upload_summaryOff">Habilitar carga de datos por http</string>
    <string name="pref_upload_summaryOn">Deshabilitar carga de datos por http</string>
    <string name="pref_upload_url_title">URL</string>
    <string name="pref_upload_url_summary">URL que aceptará data por POST</string>
    <string name="pref_vehicle_id_title">Placas de Vehículo</string>
    <string name="pref_vehicle_id_summary">Identificador único de este vehículo en el servidor</string>
    <string name="pref_bluetooth_title">Activar Bluetooth</string>
    <string name="pref_bluetooth_summaryOff">Encender Bluetooth</string>
    <string name="pref_bluetooth_summaryOn">Apagar Bluetooth</string>
    <string name="pref_bluetooth_list_devices_summary">Dispositivos emparejados.</string>
    <string name="pref_bluetooth_list_devices_title">Dispositivos Bluetooth</string>
    <string name="pref_gps_category_title">Activar GPS</string>
    <string name="pref_gps_category_summaryOff">Encender GPS</string>
    <string name="pref_gps_category_summaryOn">Apagar GPS</string>
    <string name="pref_gps_update_period_title">Tiempo entre actualizaciones</string>
    <string name="pref_gps_update_period_summary">Tiempo entre consultas de nueva posición</string>
    <string name="pref_gps_distance_period_title">Distancia entre actualizaciones</string>
    <string name="pref_gps_distance_period_summary">Distancia mínima entre actualizaciones de posición (metros)</string>
    <string name="pref_obd_protocols_title">Protocolo OBD</string>
    <string name="pref_obd_protocols_summary">Select OBD Protocol to use</string>
    <string name="pref_imperial_units_title">Imperial Units</string>
    <string name="pref_imperial_units_summaryOff">Enable imperial units</string>
    <string name="pref_imperial_units_summaryOn">Go back to metric units</string>
    <string name="pref_obd_update_period_title">Update Period in Seconds</string>
    <string name="pref_obd_update_period_summary">The length of time between querying vehicle data in seconds</string>
    <string name="pref_max_fuel_econ_title">Maximum Fuel Economy Value</string>
    <string name="pref_max_fuel_econ_summary">Any fuel economy values larger than this will be thrown out</string>
    <string name="pref_volumetric_efficiency_dialog_title">Volumetric Efficiency (eg 0.85)</string>
    <string name="pref_volumetric_efficiency_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_volumetric_efficiency_title">Volumetric Efficiency</string>
    <string name="pref_engine_displacement_title">Engine Displacement (liters)</string>
    <string name="pref_engine_displacement_summary">Used for fuel economy on vehicles without MAF sensor</string>
    <string name="pref_reader_config_title">Reader Config Commands</string>
    <string name="pref_reader_config_summary">Commands to configure bluetooth reader, separate with new line</string>
    <string name="title_pref_commands_summary">Select the commands you would like to see in real-time.</string>
    <string name="title_pref_commands_title">OBD Commands</string>
    <string name="title_pref_full_logging"> Full logging configuration </string>
    <string name="pref_enable_full_logging_summary"> Enables full offline logging with upload</string>
    <string name="pref_enable_full_logging_title"> Enable full logging </string>
    <string name="default_dirname_full_logging">OBDReaderLogs</string>
    <string name="pref_dirname_dialogTitle">Choose the name of the directory to save the logs</string>
    <string name="pref_dirname_title">Directory name</string>
    <string name="pref_dirname_summary">Name of the directory where to save the files</string>
    <string name="pref_dev_email_title">Developer Email</string>
    <string name="pref_dev_email_summary">Logs will be emailed to this address</string>
    <string name="text_noerrors">No se encontraron errores</string>


    <string name="start_live_data">Iniciar data en TR</string>
    <string name="stop_live_data">Detener data en TR</string>


    <string name="speed">Velocidad</string>
    <string name="compass">Orientación</string>
    <string name="fuel_consumption">Consumo</string>
    <string name="engine_runtime">Tiempo del motor</string>
    <string name="engine_rpm">RPM</string>
    <string name="oil_temp">Temp</string>
</resources>
